# syx

./: Cargo.toml
src/: main.rs
